# stigmem

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  LOG.md  MAINTAINERS.md  Makefile  OPERATING.md  README.md  ROADMAP.md  SECURITY.md  class_index.html  cliff.toml  conftest.py  coverage-badge.json  docker-compose.observability.yml  docker-compose.yml  function_index.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  status.json  turbo.json  z_08bd431df82d332f___init___py.html  z_08bd431df82d332f_entity_normalizer_py.html  z_08bd431df82d332f_net_util_py.html  z_0cf4a3b7d6cf9e8d___init___py.html  z_0cf4a3b7d6cf9e8d_base_py.html  z_0cf4a3b7d6cf9e8d_local_adapter_py.html  z_0cf4a3b7d6cf9e8d_openai_adapter_py.html  z_0cf4a3b7d6cf9e8d_stub_adapter_py.html  z_1b3e598ef869c574___init___py.html  (+178 more)
adapters/openclaw/: README.md  adapter.py  pyproject.toml
adapters/openclaw/clawhub-skill/: SKILL.md  adapter.py
adapters/openclaw/skill/: SKILL.md  adapter.py
adapters/openclaw/tests/: conftest.py  test_adapter_security.py  test_openclaw_adapter.py  test_openclaw_metadata.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/api/: main.py
experimental/cognee-adapter/: README.md  STATUS.md  adapter.py  changelog.md  demo.py  evidence.md  pyproject.toml  security.md  spec.md
experimental/cognee-adapter/tests/: conftest.py  test_cognee_adapter.py
experimental/lazy-instruction-discovery/: README.md  STATUS.md  concept-migration.md  concept-sdk.md  pyproject.toml  security.md  spec.md  tutorial.md
experimental/lazy-instruction-discovery/boot-stubs/: README.md  claude-code.md
experimental/lazy-instruction-discovery/integration/: README.md
experimental/memory-garden-acl/: README.md  STATUS.md  pyproject.toml  security.md  spec.md
experimental/multi-tenant/: README.md  STATUS.md  concept.md  pyproject.toml  security.md  spec.md
experimental/obsidian-adapter/cli/: README.md  pyproject.toml
experimental/openai-tools-adapter/: README.md  STATUS.md  adapter.py  changelog.md  evidence.md  pyproject.toml  security.md  spec.md
experimental/openai-tools-adapter/tests/: conftest.py  test_openai_tools_adapter.py
experimental/source-attestation/: README.md  STATUS.md  concept.md  pyproject.toml  security.md  spec.md
experimental/time-travel/: README.md  STATUS.md  concept.md  pyproject.toml  security.md  spec.md
experimental/tombstones/: README.md  STATUS.md  concept.md  pyproject.toml  security.md  spec.md
node/: Dockerfile  README.md  pyproject.toml
node/migrations/: 001_init.sql  002_federation.sql  003_entity_aliases.sql  004_gardens.sql  005_oidc.sql  006_agent_keys.sql  007_fact_audit.sql  008_async_jobs.sql  009_alias_kind.sql  010_scope_propagation.sql  011_facts_garden_attested.sql  012_multi_tenant.sql  013_rate_limit_buckets.sql  014_federation_trust.sql  015_fact_audit_detail.sql  016_entity_edges.sql  017_vec_embeddings.sql  018_subscriptions.sql  019_recall_audit.sql  019_subscriptions_idempotency_tenant_scope.sql  020_memory_cards.sql  021_instruction_discovery.sql  022_quota_buckets.sql  023_audit_fact_id_nullable.sql  024_fact_retractions.sql  024_subscription_events_seq.sql  025_peers_created_at.sql  025_rtbf_tombstones_retractions.sql  026_cid_and_tombstone_key_id.sql  027_revocation_key_id.sql  028_subscription_delivery_claim.sql  029_capability_nonce_hex_check.sql  030_plugin_migrations.sql  031_session_scope_access.sql  032_fact_interpret_as.sql  033_immutability_l1_projections.sql  034_sqlite_facts_immutability_triggers.sql  035_fact_chain_l4.sql  036_fact_chain_checkpoints_l5.sql  037_federation_audit_san_mismatch.sql  (+1 more)
node/migrations_pg/: 001_init.sql  012_multi_tenant.sql  013_rate_limit_buckets.sql  014_federation_trust.sql  016_entity_edges.sql  019_recall_audit.sql  019_subscriptions_idempotency_tenant_scope.sql  022_quota_buckets.sql  023_audit_fact_id_nullable.sql  024_subscription_events_seq.sql  025_peers_created_at.sql  027_revocation_key_id.sql  029_capability_nonce_hex_check.sql  034_sqlite_facts_immutability_triggers.sql
node/src/stigmem_conformance/: __init__.py  __main__.py  report.py
node/src/stigmem_node/: __init__.py  audit_event.py  auth.py  billing.py  card_materializer.py  cid.py  cli.py  cli_admin_handlers.py  cli_federation_handlers.py  db.py  decay.py  entity_normalizer.py  entity_resolver.py  fact_chain.py  federation_ingest.py  federation_pull.py  fuzzy_resolver.py  garden_acl.py  graph.py  graph_index.py  hlc.py  immutability.py  instruction_migrate.py  jobs.py  main.py  memory_garden_acl_gate.py  metrics.py  migrate.py  models.py  net_util.py  peer_auth.py  peer_token.py  plugin_migrations.py  rate_limit.py  recall_pipeline.py  session_graph.py  settings.py  snapshot.py  source_trust.py  subscription_delivery.py  (+9 more)
node/tests/: conftest.py  test_4node_federation.py  test_admin_audit.py  test_adversarial_conformance_runner.py  test_adversarial_result_assessment.py  test_adversarial_result_sanitizer.py  test_adversarial_results_index.py  test_agent_keys.py  test_async_jobs.py  test_audit_enriched.py  test_auth_keys_post.py  test_billing_hooks.py  test_cards.py  test_cli_auth_bootstrap.py  test_cli_handlers.py  test_cli_handlers_b2.py  test_conformance_adversarial_protocol.py  test_conformance_v1.py  test_conformance_v2.py  test_cors.py  test_embeddings.py  test_encryption.py  test_entity_normalizer.py  test_fact_chain_l4.py  test_facts.py  test_failure_modes.py  test_federation.py  test_federation_push_b2.py  test_fuzzy_resolver.py  test_gardens.py  test_graph.py  test_identity.py  test_immutability_l1.py  test_instruction_migrate_b2.py  test_intents.py  test_interpret_as.py  test_migrate.py  test_migration_compat.py  test_mtls.py  test_multi_tenant.py  (+35 more)
node/tests/adversarial/: test_adversarial_conformance_runner.py  test_adversarial_result_assessment.py  test_adversarial_result_sanitizer.py  (+1 more)
sdks/stigmem-py/: README.md  pyproject.toml
stigmem/node/: Dockerfile  pyproject.toml
(+1699 files in other folders)
