[project]
name = "stigmem"
version = "0.2.0"
description = "Stigmem — federated knowledge fabric for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]

[tool.uv.workspace]
members = [
  "node",
  "sdks/stigmem-py",
]

[tool.uv.sources]
stigmem-node = { workspace = true }
stigmem-py = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["node/tests", "sdks/stigmem-py/tests"]
addopts = "--cov --cov-report=xml --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
source = ["node/src", "sdks/stigmem-py/src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
