[project]
name = "stigmem"
version = "1.0.0rc1"
description = "Stigmem — federated knowledge fabric for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]

[tool.uv.workspace]
members = [
  "node",
  "sdks/stigmem-py",
  "adapters/openclaw",
  "adapters/obsidian",
]

[tool.uv.sources]
stigmem-node = { workspace = true }
stigmem-py = { workspace = true }
stigmem-openclaw = { workspace = true }
stigmem-obsidian = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "hypothesis>=6.100",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["node/tests", "sdks/stigmem-py/tests", "node/src/stigmem_conformance/tests"]
pythonpath = ["node/tests", "sdks/stigmem-py/tests"]
addopts = "--import-mode=importlib"
markers = [
  "unit: isolated package-level tests without external services",
  "integration: multi-module or HTTP-level tests against a local app/runtime",
  "conformance: wire-contract and versioned vector coverage",
  "postgres: tests that require a PostgreSQL backend",
  "libsql: tests that require a libSQL backend",
  "docker: tests that require Docker or containerized dependencies",
  "eval: adversarial or recall evaluation suites",
  "slow: tests intentionally excluded from fast PR loops",
  "network: tests that require outbound network access",
]

[tool.coverage.run]
source = ["node/src", "sdks/stigmem-py/src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
