[project]
name = "stigmem"
version = "0.9.0a1"
description = "Stigmem — federated knowledge fabric for AI agents (meta-package)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]
keywords = ["stigmem", "federation", "memory", "ai", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# `pip install stigmem` → installs the Python SDK (most common adopter path).
# Operators self-hosting a node use `pip install stigmem[node]` or
# `pip install stigmem-node` directly. See the install table below for extras.
dependencies = [
  "stigmem-py>=0.9.0a1,<1.0.0",
]

[project.optional-dependencies]
# pip install stigmem[node] → SDK + reference node service
node = ["stigmem-node>=0.9.0a1,<1.0.0"]
# pip install stigmem[openclaw] → SDK + OpenClaw adapter
openclaw = ["stigmem-openclaw>=0.9.0a1,<1.0.0"]
# pip install stigmem[all] → everything published from this monorepo
all = [
  "stigmem-node>=0.9.0a1,<1.0.0",
  "stigmem-openclaw>=0.9.0a1,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/Eidetic-Labs/stigmem"
Documentation = "https://docs.stigmem.dev"
Repository = "https://github.com/Eidetic-Labs/stigmem"
Issues = "https://github.com/Eidetic-Labs/stigmem/issues"
Changelog = "https://github.com/Eidetic-Labs/stigmem/blob/main/CHANGELOG.md"

# stigmem is a meta-package: it carries no Python code of its own.
# `[tool.setuptools] packages = []` tells setuptools "no Python packages to
# bundle" — the wheel is intentionally empty. The point of this distribution
# is to claim the canonical `stigmem` name on PyPI and make `pip install stigmem`
# resolve to the right collection of real packages via dependencies + extras.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.workspace]
# Per ADR-002 v1 critical-path scope + ADR-009 §2(b): only critical-path
# packages in the default workspace. experimental/ is excluded so default
# `uv sync` doesn't pull deferred-feature dependencies. Operators who want
# an experimental feature install its package explicitly via
# `pip install stigmem-plugin-<feature>` (when ADR-011 plugin packaging
# lands) or by adding the experimental/<feature>/ path to their workspace.
members = [
  "node",
  "sdks/stigmem-py",
  "adapters/openclaw",
]
exclude = ["experimental/**"]

[tool.uv.sources]
stigmem-node = { workspace = true }
stigmem-py = { workspace = true }
stigmem-openclaw = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "hypothesis>=6.100",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["node/tests", "sdks/stigmem-py/tests", "node/src/stigmem_conformance/tests"]
pythonpath = ["node/tests", "sdks/stigmem-py/tests"]
addopts = "--import-mode=importlib --strict-markers"
markers = [
  "unit: isolated package-level tests without external services",
  "integration: multi-module or HTTP-level tests against a local app/runtime",
  "conformance: wire-contract and versioned vector coverage",
  "postgres: tests that require a PostgreSQL backend",
  "libsql: tests that require a libSQL backend",
  "docker: tests that require Docker or containerized dependencies",
  "eval: adversarial or recall evaluation suites",
  "slow: tests intentionally excluded from fast PR loops",
  "network: tests that require outbound network access",
]

[tool.coverage.run]
source = ["node/src", "sdks/stigmem-py/src"]
branch = true
omit = ["*/tests/*", "*/migrations/*"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
