[project]
name = "stigmem-node"
version = "1.0.0rc1"
description = "Stigmem reference node — single-host production implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Eidetic-Labs", email = "oss@eidetic-labs.ai" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "canonicaljson>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
libsql = [
    # libSQL / Turso embedded-replica backend (Phase 8).
    # Latest release on PyPI is 0.0.x; bump the floor when a stable 1.x ships.
    "libsql-experimental>=0.0.1",
]
encryption = [
    # Argon2id key derivation for passphrase-based encryption-at-rest (Phase 8).
    "argon2-cffi>=23.1",
]
sqlcipher = [
    # SQLCipher-enabled SQLite driver for at-rest encryption (Phase 8).
    # Requires the SQLCipher C library; see the encryption-at-rest guide.
    "sqlcipher3>=0.5.0",
]
sqlite-vec = [
    # sqlite-vec extension for vector search (Phase 9 / spec §20).
    # Enables embed_enabled=true; local vector ANN search via sqlite-vec virtual tables.
    "sqlite-vec>=0.1.0",
]
embed-openai = [
    # OpenAI embeddings API cloud opt-in (Phase 9 / design memo §2).
    "openai>=1.0",
]
postgres = [
    # PostgreSQL backend (Phase 11 — feature-flagged).
    # Requires a running PostgreSQL server; set STIGMEM_PG_DSN or DATABASE_URL.
    # psycopg2-binary includes pre-compiled C extensions; swap for psycopg2>=2.9
    # in production environments that compile from source.
    "psycopg2-binary>=2.9",
    # pgvector Python adapter — required only when embed_enabled=true.
    "pgvector>=0.2.0",
]
conformance = [
    # Standalone behavioral conformance suite (Phase 11).
    # Installs stigmem_conformance and its test runner.
    # Run: python -m stigmem_conformance --backend <name>
    "pytest>=8.0",
    "stigmem-node[postgres]",
]

[project.scripts]
stigmem-node = "stigmem_node.main:run"
stigmem = "stigmem_node.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stigmem_node", "src/stigmem_conformance"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
