[project]
name = "stigmem-node"
version = "0.9.0a2"
description = "Stigmem reference node — single-host production implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Eidetic Labs", email = "oss@eidetic-labs.ai" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
    "canonicaljson>=2.0",
    "packaging>=24",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
libsql = [
    # libSQL / Turso embedded-replica backend (Phase 8).
    # Latest release on PyPI is 0.0.x; bump the floor when a stable 1.x ships.
    "libsql-experimental>=0.0.1",
]
encryption = [
    # Argon2id is now a core dependency for API-key hashing.
    # The extra remains for backward-compatible install commands.
]
sqlcipher = [
    # SQLCipher-enabled SQLite driver for at-rest encryption (Phase 8).
    # Requires the SQLCipher C library; see the encryption-at-rest guide.
    "sqlcipher3>=0.5.0",
]
sqlite-vec = [
    # sqlite-vec extension for vector search (Phase 9 / spec §20).
    # Enables embed_enabled=true; local vector ANN search via sqlite-vec virtual tables.
    "sqlite-vec>=0.1.0",
]
embed-openai = [
    # OpenAI embeddings API cloud opt-in (Phase 9 / design memo §2).
    "openai>=1.0",
]
postgres = [
    # PostgreSQL backend (Phase 11 — feature-flagged).
    # Requires a running PostgreSQL server; set STIGMEM_PG_DSN or DATABASE_URL.
    # psycopg2-binary includes pre-compiled C extensions; swap for psycopg2>=2.9
    # in production environments that compile from source.
    "psycopg2-binary>=2.9",
    # pgvector Python adapter — required only when embed_enabled=true.
    "pgvector>=0.2.0",
]
conformance = [
    # Standalone behavioral conformance suite (Phase 11).
    # Installs stigmem_conformance and its test runner.
    # Run: python -m stigmem_conformance --backend <name>
    "pytest>=8.0",
    "stigmem-node[postgres]",
]
observability = [
    # Phase 13 — full OpenTelemetry + Prometheus observability stack.
    # Activate with STIGMEM_OTEL_ENABLED=true (tracing) and the /metrics endpoint
    # (Prometheus; no extra env var required).
    "prometheus-client>=0.20",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
]

[project.scripts]
stigmem-node = "stigmem_node.main:run"
stigmem = "stigmem_node.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stigmem_node", "src/stigmem_conformance"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101", "S105", "S106"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# S608 (hardcoded-sql-expression): each call site uses parameterized
# queries with literal SQL fragments (e.g. WHERE x = ?) and is annotated
# with `# nosec` explaining why interpolation is safe. The pattern is
# audited; per-file ignore avoids `noqa` clutter.
"src/stigmem_node/decay.py" = ["S608"]
"src/stigmem_node/graph_index.py" = ["S608"]
"src/stigmem_node/routes/aliases.py" = ["S608"]
"src/stigmem_node/routes/facts.py" = ["S608"]
"src/stigmem_node/routes/federation.py" = ["S608"]
"src/stigmem_node/routes/lint.py" = ["S608"]
"src/stigmem_node/routes/quarantine.py" = ["S608"]
"src/stigmem_node/routes/recall.py" = ["S608"]
"src/stigmem_node/routes/synthesize.py" = ["S608"]
"src/stigmem_node/storage/sqlite_backend.py" = ["S608"]
"src/stigmem_node/storage/postgres_backend.py" = ["S608"]
"src/stigmem_node/vector_search.py" = ["S608"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
