[project]
name = "ai-platform-api"
version = "0.1.0"
description = "FastAPI REST + WebSocket server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "agent-platform-core",
  "agent-platform-agents",
  "agent-platform-compliance",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "alembic>=1.13",
  "arq>=0.25",
  "python-multipart>=0.0.9",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "pydantic-settings>=2.3",
  "structlog>=24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
