[project]
name = "stigmem-plugin-lazy-instruction-discovery"
version = "0.9.0a2"
description = "Experimental lazy instruction discovery plugin for Stigmem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]
keywords = ["stigmem", "plugins", "agents", "instructions", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2",
    "stigmem-node>=0.9.0a2,<1.0.0",
]

[project.entry-points."stigmem.plugins"]
lazy-instruction-discovery = "stigmem_plugin_lazy_instruction_discovery:plugin_manifest"

[project.urls]
Homepage = "https://github.com/eidetic-labs/stigmem"
Documentation = "https://github.com/eidetic-labs/stigmem/tree/main/experimental/lazy-instruction-discovery"
Repository = "https://github.com/eidetic-labs/stigmem"
Issues = "https://github.com/eidetic-labs/stigmem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stigmem_plugin_lazy_instruction_discovery"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "STATUS.md",
  "security.md",
  "spec.md",
  "tutorial.md",
  "concept*.md",
  "boot-stubs/*.md",
  "integration/README.md",
  "src/stigmem_plugin_lazy_instruction_discovery/**/*.py",
  "src/stigmem_plugin_lazy_instruction_discovery/**/*.sql",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
