[project]
name = "stigmem-plugin-memory-garden-acl"
version = "0.1.0"
description = "Experimental Memory Garden advanced ACL plugin for Stigmem."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.entry-points."stigmem.plugins"]
memory-garden-acl = "stigmem_plugin_memory_garden_acl:plugin_manifest"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
