[project]
name = "stigmem-plugin-time-travel"
version = "0.1.0"
description = "Experimental time-travel query plugin for Stigmem."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.entry-points."stigmem.plugins"]
time-travel = "stigmem_plugin_time_travel:plugin_manifest"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
