[project]
name = "stigmem-plugin-tombstones"
version = "0.1.0"
description = "Experimental RTBF tombstone plugin for Stigmem."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.entry-points."stigmem.plugins"]
tombstones = "stigmem_plugin_tombstones:plugin_manifest"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
