[project]
name = "stigmem-plugin-tombstones"
version = "0.9.0a8"
description = "Experimental RTBF tombstone plugin for Stigmem."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]
keywords = ["stigmem", "plugins", "tombstones", "rtbf", "memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2,<3",
    "stigmem-node>=0.9.0a8,<1.0.0",
]

[project.entry-points."stigmem.plugins"]
tombstones = "stigmem_plugin_tombstones:plugin_manifest"

[project.urls]
Homepage = "https://github.com/eidetic-labs/stigmem"
Documentation = "https://github.com/eidetic-labs/stigmem/tree/main/features/tombstones"
Repository = "https://github.com/eidetic-labs/stigmem"
Issues = "https://github.com/eidetic-labs/stigmem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stigmem_plugin_tombstones"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "STATUS.md",
  "security.md",
  "spec.md",
  "concept.md",
  "src/stigmem_plugin_tombstones/**/*.py",
  "src/stigmem_plugin_tombstones/**/*.sql",
]
