[project]
name = "stigmem-obsidian"
version = "0.1.0"
description = "Stigmem adapter for Obsidian/Logseq/Dendron markdown vaults — bidirectional sync CLI/daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Eidetic Labs", email = "oss@eidetic-labs.ai" },
]
keywords = ["stigmem", "obsidian", "logseq", "markdown", "memory", "sync"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "stigmem-py>=0.4.0",
  "click>=8.1",
  "tomli>=2.0; python_version < '3.11'",
  "watchdog>=4.0",
  "python-frontmatter>=1.1",
  "pydantic>=2.0",
]

[project.scripts]
stigmem-obsidian = "stigmem_obsidian.cli:main"

[project.urls]
Homepage = "https://github.com/eidetic-labs/stigmem"
Documentation = "https://docs.stigmem.dev/en/latest/docs/guides/connectors/obsidian"
Repository = "https://github.com/eidetic-labs/stigmem"
Issues = "https://github.com/eidetic-labs/stigmem/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stigmem_obsidian"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
